# wpl-compiler

./: .gitignore  README.md
WPL/: CMakeLists.txt  README.md  exploit.py
WPL/cmake/: ANTLR.cmake  Codegen.cmake  LLVM.cmake  ProjectGlobals.cmake  Runtime.cmake  Utility.cmake
WPL/examples/demo/: wpl_demo.wpl
WPL/examples/rpnprinter/: RPNVisitor.h
WPL/src/: '  CMakeLists.txt  calculator.cpp  exploit.py  llvm-c  wpl.cpp
WPL/src/cmake/: antlr.cmake
WPL/src/codegen/: .CodegenVisitor.cpp.swp  CodegenVisitor.cpp  MyInliner.cpp
WPL/src/codegen/include/: .CodegenVisitor.h.swp  CodegenVisitor.h
WPL/src/lexparse/: .WPL.g4.swp  CMakeLists.txt  WPL.g4
WPL/src/lexparse/Grun/: Calculator.g4  CalculatorParser.java
WPL/src/lexparse/assignment_exp/: Calculator.g4  CalculatorListener.java  CalculatorParser.java
WPL/src/lexparse/experiment/: Calculator.g4  CalculatorParser.java
WPL/src/lexparse/test/: WPL.g4  WPLBaseListener.java  WPLLexer.java  WPLListener.java  WPLParser.java  t_array.txt  t_functon.txt
WPL/src/runtime/: CMakeLists.txt  foo  foo.c  foo.ll  readme.md  wpl_runtime.c
WPL/src/semantic/: .SemanticVisitor.cpp.swp  SemanticVisitor.cpp
WPL/src/semantic/include/: .SemanticVisitor.h.swp  PropertyManager.h  SemanticVisitor.h
WPL/src/symbol/: CMakeLists.txt  STManager.cpp  Scope.cpp  SymbolVisitor.cpp
WPL/src/symbol/include/: STManager.h  Scope.h  Symbol.h  SymbolVisitor.h
WPL/src/utility/include/: ErrorHandler.h
WPL/test/: CMakeLists.txt
WPL/test/CompilerTestBed/: addtest  fail  harness  makenew  pass  report  restart
WPL/test/CompilerTestBed/Files/Output/: wpl_runtime.c
WPL/test/CompilerTestBed/Tests/Unclassified/: A3Test  A4Test  A6Test
WPL/test/TestBed/: clear-parser  details  discard  harness  make-parser  report  restart  reverse  rungrun  testlog  wplc
WPL/test/TestBed/Files/: compileForError
WPL/test/TestBed/Files/Output/: A13  A15  A15.ll
WPL/test/TestBed/Files/WPLSource/: assignments.wpl  invalidArrays.wpl  invalidParameters.wpl  multipleDefinitions.wpl  strings.wpl  typedFunc.wpl  typedProc.wpl  types.wpl  validParameters.wpl  variadicExtern.wpl
WPL/test/TestBed/Tests/Unclassified/: A7Test  assignments  initializers  invalidParameters  multipleDefinitions  types  untypedFunc  untypedProc  validParameters
WPL/test/TestBed/Tests_old/Unclassified/: arrays  extern  variadicExtern
WPL/test/cmake/: CodegenTests.cmake
WPL/test/codegen/: codegen_tests.cpp
WPL/test/lexparse/: parser_tests.cpp  scanner_tests.cpp  test_error_handlers.h
WPL/test/semantic/: semantic_tests.cpp
WPL/test/symbol/: symbol_tests.cpp
WPL/test/testdata/: A1  A1.ll  A1.wpl  A10.ll  A10.wpl  A16.wpl  A17.wpl  A21.ll  A21.wpl  A5  A5.ll  A5.wpl  A5.wpl.ll  A6  A6.ll  A7  B4.wpl  adce.ll  b_test_ok1.wpl  b_test_ok2.wpl  c_test_ok.wpl  dorun  switch.c  t_adce.wpl  test1.wpl  test2.wpl
calculator-complete/: .ll  README.md
calculator-complete/cmake/: LLVM.cmake  Runtime.cmake
calculator-complete/examples/: CMakeLists.txt
calculator-complete/sandbox/: CMakeLists.txt  CppDataStructures.h  assignment.cpp  hello.cpp  memory1.cpp  sandbox.cpp
calculator-complete/src/: CMakeLists.txt  calculator.cpp
calculator-complete/src/symbol/: Scope.cpp
calculator-complete/test/: CMakeLists.txt
calculator-starter/: .gdb_history  CMakeLists.txt
calculator-starter/cmake/: ANTLR.cmake  LLVM.cmake  Runtime.cmake  Semantic.cmake  Symbol.cmake
calculator-starter/examples/is_prime/: isPrime.ll
calculator-starter/examples/rpnprinter/: RPNVisitor.cpp  rpnprinter.cpp
calculator-starter/install/: calculator
calculator-starter/src/: .calculator.cpp.swp  CMakeLists.txt  Calculator.cpp  calculator.cpp
calculator-starter/src/codegen/: CodegenVisitor.cpp
calculator-starter/src/codegen/include/: CodegenVisitor.h
calculator-starter/src/lexparse/: CMakeLists.txt  Calculator.g4
calculator-starter/src/lexparse/Grun/: CalculatorBaseListener.java  CalculatorListener.java  test.txt
calculator-starter/src/lexparse/assignment_exp/: .Calculator.g4.swp  CalculatorBaseListener.java  CalculatorLexer.java
calculator-starter/src/lexparse/bk/: Calculator.g4
calculator-starter/src/lexparse/experiment/: Calculator.g4  CalculatorBaseListener.java  CalculatorLexer.java  CalculatorListener.java  build.sh  test.txt
calculator-starter/src/runtime/: CMakeLists.txt  calculator_runtime.c
calculator-starter/src/semantic/: CMakeLists.txt  SemanticVisitor.cpp
calculator-starter/src/semantic/include/: PropertyManager.h  SemanticVisitor.h
calculator-starter/src/symbol/: STManager.cpp  Scope.cpp
calculator-starter/src/symbol/include/: STManager.h  Scope.h  Symbol.h
calculator-starter/src/utility/include/: CalcErrorHandler.h
calculator-starter/test/: CMakeLists.txt  test_error_handlers.h
calculator-starter/test/lexparse/: scanner_tests.cpp
calculator-starter/test/semantic/: semantic_tests.cpp
calculator-starter/test/symbol/: symbol_tests.cpp
cmake/: Codegen.cmake  independent_settings.cmake
examples/: CMakeLists.txt
examples/is_prime/: isPrime.c
examples/rpnprinter/: CMakeLists.txt  RPNVisitor.cpp  rpnprinter.cpp
personal-project/: readme.md
src/codegen/: CMakeLists.txt  CodegenVisitor.cpp  MyADCE.cpp
src/lexparse/: WPL.g4
src/runtime/: foo.c  foo.ll  wpl_runtime.h
src/semantic/: CMakeLists.txt
src/symbol/: CMakeLists.txt  Scope.cpp  SymbolVisitor.cpp
src/symbol/include/: STManager.h  Scope.h  Symbol.h
test/CompilerTestBed/: all-results  new_aliases  pass-all  result
test/TestBed/: .gitignore  C5.ll  C5.wpl  harness  make-parser  pass  pass-all  testlog
test/cmake/: SymbolTests.cmake
test/lexparse/: scanner_tests.cpp
test/semantic/: semantic_tests.cpp
test/testdata/: A1.ll  A15.wpl  A18.wpl  A19.wpl  A20.wpl  A21  A6.wpl  A7.ll  A7.wpl  A9  A9.ll  A9.wpl  B11.wpl  B12.wpl  B6.wpl  C14.wpl  C16.wpl  C17.wpl  C7.wpl  a_test_ok1.wpl  a_test_ok2.wpl  b_test_ng.wpl  c_test_ng.wpl  inline.ll  loop.c  loop.ll  switch.ll  t_extern.c  t_extern.ll  t_func_call_expr.c  t_func_call_expr.ll  test.wpl  test1.wpl
wplstarter/src/: WPL.g4  wplc.cpp
(+38 files in other folders)
